app/styles/main.scss
@import 'global';

// bower:scss
@import "bootstrap-sass-official/vendor/assets/stylesheets/bootstrap.scss";
// endbower

@import "compass/layout/sticky-footer";
@include sticky-footer(54px);

// recommended by ui-bootstrap
.pagination, .carousel, .panel-title a { cursor: pointer; }

#footer {
  background-color: $headerBackgroundColor;
  width: 100%;
  height: $footerHeight;
  padding: 0 40px;
  color: #fff;
  line-height: $footerHeight;

  a {
    color: #fff;
  }

  #copyright {

  }

  .separator {
    padding-left: 12px;
    padding-right: 12px;
  }
}

.browsehappy {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

html, body {
  height: 100%;
  font-family: $bodyFontFamily;
  font-weight: 400; /* or 400 */
  font-size: 14px;
}

/* Space out content a bit */
body {
  padding-top: 0px;
  padding-bottom: 20px;
  background: #f0f0f0;
  /* prevent half-pixel blur */
  -webkit-transform-style: preserve-3d;
  -moz-transform-style: preserve-3d;
  transform-style: preserve-3d;
}

/* Global header defaults */
h1 {
  @include header;
  font-weight: 500px;
  font-size: 25px;
}

h2 {
  @include header;
  font-weight: 700;
  font-size: 20px;
}

h3 {
  @include header;
  font-weight: 700;
  font-size: 16px;
  margin-top: 8px;
}

small {
  font-size: 12px;
}

//Removing Bootstrap's bold label selector
label {
  font-weight: inherit;
}

#root {
  margin: 0 auto;
  max-width: 1180px;
  background-color: #fff;
}

#main_view {
  .row.regions {
    background: #022040;
    text-align: center;

    * {
      margin-left: 20px;
      margin-right: 20px;
    }

    span {
      margin-top: 16px;
      color: white;
    }

    .btn {
      height: 40px;
      margin-top: 7px;
      padding-right: 20px;
      padding-left: 20px;
      background-color: rgba(0,0,0,0);
      // border-radius: 2px;
      padding-top: 10px;
      border: 0;
      color: white;
      font-weight: bold;
      border-radius: 0;

      &.active, &:hover {
        color: black;
        background-color: $orange;
      }
    }
  }

  .row.topics  .nav-tabs {
      display: none;
  }
}

#main_view .search-container {
  position: relative;
  #search {
    position: absolute;
    z-index: 1;
    left: calc(50% - 250px);
    div#search-inner {
      width: 500px;
      background-color: $darkBlue;
      padding: 10px 10px 15px;
      position: relative;
      div.ui-select-container {
        width: 100%;
        padding: 5px 15px;
        background-color:none;
        color: black;
      }
    }
  }
}

.container-narrow > hr {
  margin: 30px 0;
}

.container {
  margin-left: auto;
  margin-right: auto;
  padding: 0px;
}

.row {
  margin: 0px;
}

.btn-default.active {
  background-color: rgb(236,186,32);
}

#exploited-organisms {
  #controls {
    margin-top: 20px;
    margin-bottom: 20px;
  }

  .feedback {
    display: inline-block;
    margin-top: 10px;
  }
}

#stock-status {
  #methods {
    margin-top: 40px;
    margin-bottom: 40px;
  }
}

.eo-grid {
  width: 768px;
  height: 250px;
  .ui-grid-cell {
    cursor: pointer;
    background-color: transparent !important;
  }
  .ui-grid-cell-focus {
    background-color: transparent !important;
  }
  .ui-grid-row-selected .ui-grid-cell {
    background-color: $orange !important;
  }
}
.content-container {
  padding: 16px;
}

.content-container#estuaries {

  #map-container {
    background-color: #eee;
    font-size: 14pt;
    #control-box {
      padding: 5px 50px 10px 50px;
      height: 50px;
      .search {
        padding: 3px;
        font-size: 16pt;
        width: 500px;
      }
      .number-estuaries {
        margin-top: 10px;
      }
    }

    #estuariesmap {
      width: 100%;
      height: 380px;
    }

    #estuary-detail {
      padding: 30px;
      table {
        margin-left: auto;
        margin-right: auto;
        width: 90%;
        col:nth-child(1) {
          width: 25%;
        }
        col:nth-child(2) {
          width: 35%;
        }
        col:nth-child(3) {
          width: 20%;
        }
        .content {
        }
      }
    }
  }
}

.disclaimer {
  font-size: 12px;
  line-height: 16px;
}
.external-links {
  a:first-child {
    margin-right: 20px;
  }
}

.content-container#country-profile {
  span.title {
    font-weight: bolder;
  }
  p {
    margin-bottom: 30px;
  }
  p#links {
    margin-top: 60px;
  }
}

.content-container#topic-biodiversity {
  padding: 20px 90px 30px;

  & p:first-child, #controls, #region-selector {
    margin-bottom: 30px;
  }
}

.disabled {
  color: grey;
}

a:not([href]) {
  cursor: pointer;
}

.uppercase {
  text-transform: uppercase;
}

.taxon .nvd3 .nv-legend g.nv-series:last-child {
  cursor: default;
}

[ng-cloak] {
  display: none;
}

noscript {
  display: block;
  height: 200px;
  padding: 20px;
}

#no-data {
  height: 200px;
  padding: 20px;
}

button {
  border-radius: 0 !important;
}

//Makes the text on all "btn" styled buttons white.
.btn.disabled {
  color: white;
}

//Keep the white "btn" default styled button from having white text.
.btn.btn-default.disabled {
  color: grey;
}

.error {
  color: red;
  text-align: center;
}

.habitat-index {
  margin-top: 10px;

  .chart-title {
    font-weight: bold;
    margin: 20px 0 0 70px;
    font-size: 1.3rem;
  }

  svg g.y.axis.secondary {
    g.tick:first-of-type text,
    g.tick:last-of-type text {
      font-weight: bold;
    }
  }

  p.caveat {
    font-style: italic;
    margin-top: 20px;
    text-align: center;

    &:before {
      content: '*';
    }
  }

  .legend {
    margin: -40px auto 0;
    width: 400px;
    text-align: center;

    .legend-item {
      margin-right: 10px;

      .legend-color {
        display: inline-block;
        width: 20px;
        height: 10px;
      }
    }
  }
}

// Classes for making generic panels with potentially a header, body, and footer.
.sau-panel {
    border: 1px solid #aaaaaa;

  }

.panel-header {
  background: #f1f1f1;
  padding: 10px;
  border: none;
}

.panel-header-small {
  background: #f1f1f1;
  padding: 10px;
  border: none;
}

.panel-body {
  overflow: auto;
  padding: 10px;
}

.panel-footer {
  background: #f1f1f1;
  padding: 10px;
  border: none;
}

.side-option {
  @media (min-width: $screen-sm) {
    position: relative;
    top: 22px;
  }
}

